fixed spacing on cta

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -190,9 +190,13 @@ header nav a:hover {
 
 .cta {
 	margin: 110px 0;
+	padding-left: 80px;
 	display: flex;
 	justify-content: flex-end;
 	justify-content: space-between;
+}
+.cta:last-child {
+	padding-left: 0;
 }
 
 .cta .cta-text {
